cmake_minimum_required(VERSION 3.24)
project(Me)

set(CMAKE_CXX_STANDARD 17)

add_executable(Me 01/1_helloWorld.cpp 01/2_isPrime.cpp 02/1_dataType.cpp 02/2_arr.cpp "02/3_arrPointer.cpp" 02/4_autoArray.cpp 02/5_autoTypeId.cpp 02/6_voidPointer.cpp 02/7_for.cpp 02/8_struct.cpp Note/test.cpp 02/9_doublePointer.cpp 02/10_constPointer.cpp)
